# chessBot

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: CMakeLists.txt
src/app/design/: ui_untitled.h  untitled.ui
src/app/headers/: window.h
src/app/source/: window.cpp
src/ui/: CMakeLists.txt
src/ui/design/: icons.qrc  icons.rcc
src/ui/headers/: board.h  mainDisplay.h  window.h
src/ui/source/: board.cpp  mainDisplay.cpp  window.cpp
